# Detecting-Breaks-Via-the-Fused-Lasso-packaged

./: LICENSE  README.md  environment.yml  pyproject.toml
docs/: documentation.tex
notebooks/: quickstart.ipynb
simulations/: N25_T5_m1.py  __init__.py
src/: __init__.py  dgp.py  estimator.py  ic.py  utils.py
tests/: __init__.py  test_core.py
