[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "fused-lasso-breaks"
version         = "1.0.0"
description     = "Detecting structural breaks in panel data via the adaptive fused lasso"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
authors         = [{ name = "Yousef Kaddoura" }]
keywords        = ["econometrics", "panel data", "structural breaks", "fused lasso", "LASSO"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "cvxpy>=1.4",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
line-length = 100
select      = ["E", "F", "W"]

[tool.black]
line-length = 100
